[package]
name = "passiogo_rs"
version = "0.0.1"
edition = "2024"
authors = ["Leon Schaumann <schaumannleon@gmail.com>"]

[dependencies]
reqwest = { version = '0.11', features = ["json", "rustls-tls"]}
tokio = { version = '1', features = ["rt-multi-thread", "macros"] }
serde = { version = '1', features = ["derive"] }
serde_json = '1'
tungstenite = "0.20"
